syntax = "proto3";

package chat;

service ChatService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
  rpc StreamMessages (StreamRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string user_id = 1;
  string content = 2;
}

message StreamRequest {
  string user_id = 1;
}

message GetMessagesRequest {
  string user_id = 1;
  int32 limit = 2;
}

message GetMessagesResponse {
  repeated MessageResponse messages = 1;
}

message MessageResponse {
  string id = 1;
  string user_id = 2;
  string content = 3;
  string timestamp = 4;
}